test_suite/alan-2022-examples/passing/000060_deriv.alan
source t begin get j[h * u] end
