test_suite/alan-2022-examples/failing/002180_mutation.alan
source N begin get X[23] 9 end
